almost finished with checkpoint 2

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,1 +1,8 @@
-<h1>Home Page</h1>
+<section class= "navigation" >
+    <div class = "heading">
+        <h1> Bloc Chat </h1>
+    </div>
+    <div ng-repeat="room in home.rooms">
+            <h3>{{ room.$id }}</h3>
+    </div>
+</section>
