--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,23 @@
 <section ng-controller="HomeCtrl as home">
     <div class="navbar">
-        <h1>Bloc Chat</h1>
-        <button class="btn btn-default" type="button" ng-click="home.addRoom()">New Room</button>
+      <section class="side-bar">
+    <h1>Welcome to Bloc Chat!</h1>
+  </div><br><br>
+        <div class="room-button">
+          <input type="text" name="input" ng-model="home.newRoom.name"></input>
+          <span class="new-room-button" type="button" ng-click="home.addRoom()">Create Room</span><br>
+  </div>
         <div ng-repeat="room in home.rooms">
-            <h3>{{ room.name }}</h3>
-        </div>
+               <h3> {{ room.$index }}</h3>
+          <p class="room-name" ng-click="home.setCurrentRoom(room)"> {{ room.name }} </p>
+             </div>
+          <div class="chat-section">
+    <h3 style="text-align:center;"> {{ activeRoom.name }} </h3>
+
+          <div ng-repeat="message in home.currentMessages">
+         <p>{{ message.username }}</p>
+         <p>{{ message.content }}</p>
+         <p>{{ message.sentAt }}</p>
 
     </div>
 </section>
